# ffsync

./: .gitignore  .prettierrc.js  .prettierrc.mjs  AGENTS.md  README.md  cdk.json  data.json  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  renovate.json  tsconfig.json
.github/: renovate.json5
.github/renovate/: package-rules.json5
.github/workflows/: build.yml  cdk-diff.yml  code-review.yml  code-scan.yml  codeql.yml  deploy.yml  frontend-build.yml  lambda-tests.yml  pr-review.yml  pr-summary.yml
frontend/: .gitignore  index.html  mockup.html  package-lock.json  package.json  vite.config.ts
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2238b4215a0ab307_account_attached_clients_py.html  z_2238b4215a0ab307_account_create_py.html  z_2238b4215a0ab307_account_device_py.html  z_2238b4215a0ab307_account_devices_notify_py.html  z_2238b4215a0ab307_account_devices_py.html  z_2238b4215a0ab307_account_keys_py.html  z_2238b4215a0ab307_account_login_py.html  z_2238b4215a0ab307_account_profile_py.html  z_2238b4215a0ab307_account_status_py.html  z_2238b4215a0ab307_jwks_py.html  z_2238b4215a0ab307_oauth_authorization_py.html  z_2238b4215a0ab307_oauth_destroy_py.html  z_2238b4215a0ab307_oauth_token_py.html  z_2238b4215a0ab307_oidc_discovery_py.html  z_2238b4215a0ab307_oidc_exchange_py.html  z_2238b4215a0ab307_oidc_proxy_py.html  z_2238b4215a0ab307_scoped_key_data_py.html  z_2238b4215a0ab307_session_destroy_py.html  z_2238b4215a0ab307_session_status_py.html  z_67f6f9a13eff1831_api_router_py.html  z_67f6f9a13eff1831_auth_account_manager_py.html  z_67f6f9a13eff1831_channel_service_py.html  z_67f6f9a13eff1831_device_manager_py.html  z_67f6f9a13eff1831_fxa_crypto_py.html  z_67f6f9a13eff1831_fxa_token_manager_py.html  z_67f6f9a13eff1831_hawk_service_py.html  z_67f6f9a13eff1831_jwt_service_py.html  z_67f6f9a13eff1831_jwt_verifier_py.html  z_67f6f9a13eff1831_oauth_code_manager_py.html  z_67f6f9a13eff1831_oidc_validator_py.html  z_67f6f9a13eff1831_storage_manager_py.html  z_67f6f9a13eff1831_token_generator_py.html  z_67f6f9a13eff1831_user_manager_py.html  z_8801de83479a3fb4_service_provider_py.html  z_9274c0911b8741a6_create_py.html  z_9274c0911b8741a6_delete_py.html  (+34 more)
lambda/: .coverage  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
lambda/scripts/: codegen.sh
lambda/src/entrypoint/: __init__.py  auth_api.py  channel_api.py  hawk_authorizer.py  main.py  profile_api.py  storage_api.py  token_api.py
lambda/src/environment/: service_provider.py
lambda/src/middlewares/: hawk_auth.py  request_logging.py  weave_timestamp.py
lambda/src/routes/auth/: account_attached_clients.py  account_create.py  account_device.py  account_devices.py  account_devices_notify.py  account_keys.py  account_login.py  account_profile.py  account_status.py  jwks.py  oauth_authorization.py  oauth_destroy.py  oauth_token.py  oidc_discovery.py  oidc_exchange.py  oidc_proxy.py  scoped_key_data.py  session_destroy.py  session_status.py
lambda/src/routes/bso/: delete.py  read.py  update.py
lambda/src/routes/collections/: create.py  delete.py  list.py  read.py  update.py
lambda/src/routes/info/: read_collections.py  read_configuration.py  read_counts.py  read_quota.py  read_usage.py
lambda/src/routes/profile/: get_profile.py
lambda/src/routes/storage/: delete_all.py  delete_root.py
lambda/src/routes/token/: request.py
lambda/src/services/: api_router.py  auth_account_manager.py  channel_service.py  device_manager.py  fxa_crypto.py  fxa_token_manager.py  hawk_service.py  jwt_service.py  jwt_verifier.py  oauth_code_manager.py  oidc_validator.py  storage_manager.py  token_generator.py  user_manager.py
lambda/src/shared/: _codegen_base.py  auth.py  base_route.py  exceptions.py  models.py  oidc.py  token.py  user.py  utils.py
lambda/tests/: conftest.py  test_api_router.py  test_entrypoint.py  test_storage_manager.py
lambda/tests/entrypoint/: test_auth_api.py  test_channel_api.py  test_hawk_authorizer.py  test_profile_api.py  test_storage_api.py  test_token_api.py
lambda/tests/fixtures/: boto.py  integration.py
lambda/tests/integration/: test_e2e_flow.py  test_token_server_mozilla_spec.py  test_token_to_storage_flow.py
lambda/tests/routes/: test_bso_routes.py  test_collection_routes.py  test_info_routes.py  test_storage_routes.py
lambda/tests/routes/auth/: test_account_attached_clients.py  test_account_create.py  test_account_device.py  test_account_devices.py  test_account_devices_notify.py  test_account_keys.py  test_account_login.py  test_account_profile.py  test_account_status.py  test_jwks.py  test_oauth_authorization.py  test_oauth_destroy.py  test_oauth_token.py  test_oidc_discovery.py  test_oidc_exchange.py  test_oidc_proxy.py  test_route_dispatch.py  test_scoped_key_data.py  test_session_destroy.py  test_session_status.py
lambda/tests/routes/profile/: test_get_profile.py
lambda/tests/routes/storage/: test_delete_root.py
lambda/tests/routes/token/: test_request.py
lambda/tests/services/: test_api_router.py  test_auth_account_manager.py  test_channel_service.py  test_device_manager.py  test_fxa_crypto.py  test_fxa_token_manager.py  test_hawk_service.py  test_jwt_service.py  test_jwt_verifier.py  test_oauth_code_manager.py  test_oidc_validator.py  test_storage_hawk_middleware.py  test_storage_manager.py  test_token_generator.py  test_user_manager.py
lambda/tests/shared/: test_auth.py  test_base_route.py  test_exceptions.py  test_models.py  test_oidc.py  test_token.py  test_user.py  test_utils.py
lib/: app.ts  config.ts  utils.ts
smithy/: build.gradle.kts  settings.gradle.kts  smithy-build.json
test/: frontend.test.ts
tools/: README.md  ffsync_client.py  get_hawk_token.py  pyproject.toml  requirements.txt
(+86 files in other folders)
