[project]
name = "ffsync-lambda-handler"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aws-lambda-powertools==3.27.0",
    "boto3==1.42.83",
    "cryptography==46.0.6",
    "dataclasses-json==0.6.7",
    "mohawk==1.1.0",
    "PyJWT==2.12.1",
    "requests==2.33.1"
]


[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "black==26.3.1",
    "isort==8.0.1",
    "flake8==7.3.0",
    "Flake8-pyproject==1.2.4",
    "mypy==1.20.0",
    "types-boto3==1.42.83",
    "hypothesis>=6.0.0",
    "types-requests==2.33.0.20260402"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=term",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=100",
    "-n=auto"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
]

[tool.black]
line-length = 100
target-version = ["py314"]
src = ["src/", "tests/"]

[tool.isort]
profile = "black"
src_paths = ["src/", "tests/"]
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':'
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
    "W504",  # line break after binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".coverage",
    "htmlcov",
]
per-file-ignores = [
    "__init__.py:F401",  # imported but unused
    "tests/*:S101",      # use of assert detected (if using flake8-bandit)
]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C90", # mccabe complexity
]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
files = ["src/", "tests/"]
exclude = [
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "htmlcov",
]
